--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     embedded
-    arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+    arjs="trackingMethod: best; debugUIEnabled: false;"
   >
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
