--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
       type="nft"
-      url="./image-trex/trex3/trex"
+      url="./image-trex/trex/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
