--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!-- import aframe and then ar.js with image tracking / location based features -->
 <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-nft.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
+<!-- style for the loader -->
 <style>
   .arjs-loader {
     height: 100%;
@@ -23,32 +25,54 @@
 </style>
 
 <body style="margin : 0px; overflow: hidden;">
-  <!-- minimal loader shown until image descriptors are loaded -->
+  <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
   <div class="arjs-loader">
     <div>Loading, please wait...</div>
   </div>
+
+  <!-- a-frame scene -->
   <a-scene
     vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     embedded
-    arjs="trackingMethod: best; debugUIEnabled: false;"
+    arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
-    <!-- we use cors proxy to avoid cross-origin problems -->
+    <!-- a-nft is the anchor that defines an Image Tracking entity -->
+    <!-- on 'url' use the path to the Image Descriptors created before. -->
+    <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
+    <a-assets>
+      <img id="my-image" src="./images/clique.png">
+    </a-assets>
     <a-nft
       type="nft"
-      url="./image-trex/trex/trex"
+      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/kaueemanuel/exp-ar/master/image-trex/trex/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
-      <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        scale="5 5 5"
-        position="50 150 0"
-      >
-      </a-entity>
+        <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
+        <!-- <a-entity
+            gltf-model="./model/scene.gltf"
+            scale="5 5 5"
+            position="0 0 0"
+
+        >
+        </a-entity> -->
+
+      <!-- Using the asset management system. -->
+    <a-image src="#my-image"
+    rotation="-90 0 0"
+    position='300 50 -550'
+    scale="0.5 0.5 0.5"
+    width='500'
+    height='175'
+    ></a-image>      
+      
+
     </a-nft>
+    
+    <!-- static camera that moves according to the device movemenents -->
     <a-entity camera></a-entity>
   </a-scene>
 </body>
