--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ function bezierEvaluate(p0, p1, p2, p3, t) {
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
-<a-box src="" id="Cube_0" class="intersectable" width="0,1" height="0,1" depth="0,1" position="-0,313 0,057 -0,291" rotation="0 0 0" scale="1 1 1" color="#FFFFFF" transparent=False
+<a-box src="" id="Cube_0" class="intersectable" depth="0.1" position="-0.313 0.057 -0.291" rotation="0 0 0" scale="0.1 0.1 0.1" color="#FFFFFF" transparent=False
 ></a-box>
-<a-sphere src="" id="Sphere_1" class="intersectable" radius="0,05" position="0,238 0,089 0,138" rotation="0 0 0" scale="1 1 1" color="#FFFFFF" transparent=False
+<a-sphere src="" id="Sphere_1" class="intersectable" radius="0.05" position="0.238 0.089 0.138" rotation="0 0 0" scale="0.1 0.1 0.1" color="#FFFFFF" transparent=True
 ></a-sphere>
 <!-- END: Unity Compiled Objects -->
 
