--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ function bezierEvaluate(p0, p1, p2, p3, t) {
 <!-- BEGIN: Unity Compiled Objects -->
 <a-box src="" id="Cube_0" class="intersectable" depth="0.1" position="-0.313 -57 -0.291" rotation="0 0 0" scale="0.1 0.1 0.1" color="#FFFFFF" transparent=False
 ></a-box>
-<a-sphere src="" id="Sphere_1" class="intersectable" radius="0.05" position="0.238 -89 0.138" rotation="0 0 0" scale="0.1 0.1 0.1" color="#FFFFFF" transparent=True
+<a-sphere src="" id="Sphere_1" class="intersectable" radius="0.05" position="0.238 -89 0.138" rotation="0 0 0" scale="0.1 0.1 0.1" color="#FFFFFF" transparent=true
 ></a-sphere>
 <!-- END: Unity Compiled Objects -->
 
