--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!-- BEGIN: Top HTML -->
 <!DOCTYPE html>
 <!-- include aframe -->
-<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <!-- include ar.js -->
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.2/aframe/build/aframe-ar.js"></script>
 
 <!-- to load .ply model -->
 <script src="https://rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.loaders.min.js"></script>
@@ -104,10 +104,12 @@ function bezierEvaluate(p0, p1, p2, p3, t) {
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
-<a-box src="" id="Cube_0" class="intersectable" width="0.1" height="0.1" depth="0.1" position="-0.313 0.057 -0.291" rotation="0 0 0" scale="1 1 1" color="#FFFFFF" transparent=False
+<a-box src="" id="Cube_0" class="intersectable" width="0,1" height="0,1" depth="0,1" position="-0,313 0,057 -0,291" rotation="0 0 0" color="#FFFFFF" transparent=False
 ></a-box>
-<a-sphere src="" id="Sphere_1" class="intersectable" radius="0.05" position="0.238 0.089 0.138" rotation="0 0 0" scale="1 1 1" color="#FFFFFF" transparent=True
+<a-sphere src="" id="Sphere_1" class="intersectable" radius="0,05" position="0,238 0,089 0,138" rotation="0 0 0" color="#FFFFFF" transparent=False
 ></a-sphere>
+<a-plane src="textures/trex.png" id="Plane_2" class="intersectable" width="1" height="1" position="0 0,725 0" rotation="0 0 0" color="#FFFFFF" transparent=True
+></a-plane>
 <!-- END: Unity Compiled Objects -->
 
 <!-- BEGIN: Bottom HTML -->
