--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ function bezierEvaluate(p0, p1, p2, p3, t) {
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
-<a-box src="" id="Cube_0" class="intersectable" width="0,1" height="0,1" depth="0,1" position="-0,313 0,057 -0,291" rotation="0 0 0" color="#FFFFFF" transparent=False
+<a-box src="" id="Cube_0" class="intersectable" width="0.1" height="0.1" depth="0.1" position="-0.313 0.057 -0.291" scale="1 1 1" rotation="0 0 0" color="#FFFFFF" transparent=False
 ></a-box>
-<a-sphere src="" id="Sphere_1" class="intersectable" radius="0,05" position="0,238 0,089 0,138" rotation="0 0 0" color="#FFFFFF" transparent=False
+<a-sphere src="" id="Sphere_1" class="intersectable" radius="0.05" position="0.238 0.089 0.138" rotation="0 0 0" scale="1 1 1" color="#FFFFFF" transparent=False
 ></a-sphere>
-<a-plane src="textures/trex.png" id="Plane_2" class="intersectable" width="1" height="1" position="0 0,725 0" rotation="0 0 0" color="#FFFFFF" transparent=True
+<a-plane src="textures/trex.png" id="Plane_2" class="intersectable" width="1" height="1" position="0 0.725 0" scale="1 1 1" rotation="0 0 0" color="#FFFFFF" transparent=True
 ></a-plane>
 <!-- END: Unity Compiled Objects -->
 
